--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "cerc-docs-auth",
   "version": "0.1.0",
   "private": true,
-  "engines": { "node": "16.16.0", "npm": "8.14.0"}, 
+  "engines": {
+    "node": "16.16.0",
+    "npm": "8.14.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.0",
     "create-react-app": "^5.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
