--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "basic-authorization-header": "^0.2.7",
     "bootstrap": "^5.2.0",
+    "buffer": "^6.0.3",
     "create-react-app": "^5.0.1",
     "express": "^4.18.1",
     "react": "^18.2.0",
